# stationaryorbit.graphics-dib

./: .gitignore  CMakeLists.txt  README.md  stationaryorbit-graphics-dib.code-workspace
cmake/: Findstationaryorbit.graphics-dib.cmake
include/stationaryorbit/: graphics-dib.bmpimage.hpp  graphics-dib.structures.hpp
include/stationaryorbit/graphics-dib/: dibcorebitmap.hpp  dibheaders.hpp  dibinfobitmap.hpp  dibloader.hpp  dibpixeldata.hpp  dibv4bitmap.hpp  dibv5bitmap.hpp  invaliddibformat.hpp  rgbdecoder.hpp
src/: CMakeLists.txt  dibcorebitmap.cpp  dibheaders.cpp  dibinfobitmap.cpp  dibloader.cpp  dibpixeldata.cpp  dibv4bitmap.cpp  dibv5bitmap.cpp  invaliddibformat.cpp  rgbdecoder.cpp
test/: CMakeLists.txt  dib.cpp  graphics-test.cpp
